--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,47 @@
-.env
-.venv
-.ruff_cache
+# Python
+*.pyc
+__pycache__/
+*.pyo
+*.pyd
+.venv/
+env/
+venv/
+*.env
+.venv/
+venv/
+*.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Build directories
+dist/
+build/
+*.egg-info/
+
+# Editor directories and files
+.vscode/
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Node modules
+node_modules/
+
+# Frontend build outputs
+dist/
+out/
+*.local
+
+# Cache
+.ruff_cache/
