--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 pandas==2.2.3
 fastapi>=0.115.6,<0.116.0
-uvicorn==0.34.0
+uvicorn[standard]==0.34.0
 requests>=2.32.3,<3.0.0
 pytest>=8.3.4,<9.0.0
 pytest-cov==6.0.0
