--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,3 +13,6 @@ ruff==0.9.2
 psycopg2==2.9.10
 # arcticdb==5.2.1
 sqlalchemy==2.0.37
+sphinx==8.2.3
+sphinx-rtd-theme==3.0.2
+sphinx-autodoc-typehints==3.1.0
