--- a/.github/workflows/create-diagram.yml
+++ b/.github/workflows/create-diagram.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch: {}
   push:
     branches:
-      - main
+      - feat/vol-models
 jobs:
   get_data:
     runs-on: ubuntu-latest
@@ -13,4 +13,7 @@ jobs:
       - name: Update diagram
         uses: githubocto/repo-visualizer@main
         with:
-          excluded_paths: "ignore,.github"
+          excluded_paths: |
+            .github
+            node_modules
+          output_file: diagram.svg
