--- a/.github/workflows/create-diagram.yml
+++ b/.github/workflows/create-diagram.yml
@@ -4,16 +4,23 @@ on:
   push:
     branches:
       - feat/vol-models
+
 jobs:
   get_data:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@master
-      - name: Update diagram
+      - name: Generate diagram
         uses: githubocto/repo-visualizer@main
         with:
           excluded_paths: |
             .github
             node_modules
-          output_file: diagram.svg
+          output_file: "docs/diagram.svg"
+          artifact_name: "repo-diagram"
+      - name: Upload diagram
+        uses: actions/upload-artifact@v2
+        with:
+          name: repo-diagram
+          path: docs/diagram.svg
