--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ coverage==7.6.10
 pytest-asyncio==0.25.2
 scipy>=1.15.1,<2.0.0
 scikit_learn==1.6.1
+tensorflow>=2.13.0,<3.0.0
 pydantic_settings==2.7.1
 ruff==0.9.2
 psycopg2==2.9.10
